Fix to prevent overflow-x

--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,13 @@
   --sn-stylekit-sans-serif-font: "Noto Sans Hebrew", "Noto Sans", Arial, sans-serif;
 }
 
+body,
+html,
+body > div {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 html {
   font-size: var(--sn-stylekit-base-font-size);
   background-color: transparent; // to help with seamless transition while loading themes
